--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "html2canvas": "^1.4.1",
+    "js-file-download": "^0.4.12",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
