--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-select": "^5.6.0",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
